[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tinkoff-investments"
version = "0.2.0-beta48"
description = ""
authors = ["Danil Akhtarov <d.akhtarov@tinkoff.ru>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Tinkoff/invest-python"
homepage = "https://github.com/Tinkoff/invest-python"
packages = [
    { include = "tinkoff" },
]
exclude = ["tinkoff/__init__.py"]

[tool.poetry.dependencies]
python = "^3.8"
cachetools = "^5.2.0"
grpcio = "^1.39.0"
matplotlib = { version = "^3.5.1", optional = true}
mplfinance = { version = "^0.12.8-beta.9", optional = true}
numpy = { version = "^1.22.2", optional = true}
pandas = { version = "^1.4.0", optional = true}
protobuf = "^3.20.2"
python-dateutil = "^2.8.2"
tinkoff = "^0.1.1"
pydantic = "^1.9.2"

[tool.poetry.extras]
all = ["pandas", "numpy", "matplotlib", "mplfinance"]

[tool.poetry.group.bump.dependencies]
PyYAML = "^6.0"
tomlkit = "^0.11.6"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.4"
bandit = "^1.7.4"
black = {extras = ["jupyter"], version = "^22.1.0"}
codecov = "^2.1.12"
flake8 = "^4.0.1"
flake8-annotations-complexity = "^0.0.6"
flake8-bandit = "^3"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^21.11.29"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.7.0"
flake8-eradicate = "^1.2.0"
flake8-if-expr = "^1.0.4"
flake8-isort = "^4.1.1"
flake8-logging-format = "^0.6.0"
flake8-print = "^4.0.0"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.6.0"
flake8-requirements = "^1.5.1"
flake8-return = "^1.1.3"
grpcio-tools = "^1.39.0"
ipython = "^8.1.1"
isort = "^5.10.1"
mypy = "^0.930"
mypy-protobuf = "^3.1.0"
pylint = "^2.12.2"
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"
pytest-deadfixtures = "^2.2.1"
pytest-freezegun = "^0.4.2"
pytest-mock = "^3.6.1"
requests = "^2.27.1"
ruff = "^0.0.188"
toml-sort = "^0.19.0"
types-cachetools = "^5.2.1"
types-protobuf = "^3.18.2"
types-python-dateutil = "^2.8.12"
types-PyYAML = "^6.0.7"
types-requests = "^2.27.7"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3"
mkdocs-include-markdown-plugin = "^3.9.1"
mkdocs-material = "^8.1.3"
mkdocstrings = { version = "^0.19.0", extras = ["python"] }
termynal = "^0.2.0"

[tool.ruff]
line-length = 88
select = [
    "D",
    "B",
    "C",
    "E",
    "F",
    "Q",
    "RUF001",
    "T",
    "W",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
    "B008",
    "B905",
    "Q000",
]
exclude = [
    "tinkoff/invest/grpc",
    "examples/*",
]
